--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
 	<title>CSS BLues</title>
 	<style type="text/css">
+		header, footer {
+			background-color: white;
+			padding: 10 px;
+		}	
+		footer {
+			text-align: center;
+			margin: auto;
+			clear: both;	
+		}
+
 		
 	</style>
 </head>
