--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>CSS BLues</title>
 	<style type="text/css">
 		header, footer {
-			background-color: white;
+			background-color: black;
 			padding: 10 px;
 		}	
 		footer {
